Fix whitespace

--- a/style.css
+++ b/style.css
@@ -2,11 +2,20 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+html{
+    margin:0;
+    padding:0;
+    max-height:100vh;
+    /* overflow:hidden; */
+  }
+
 body {
+    position:relative;
     display: flex;
-    justify-content: space-evenly;
-    align-items: stretch;
+    /* justify-content: center; */
+    /* align-items: stretch; */
     margin: 0;
+    /* height: auto; */
     height: 100vh;
 }
 
